results/SVCOMP/conversational/log-boolean2-2024_03_08_20_34_13.txt
import java.util.Random;

public class boolean2 {
  //@ ensures \result == !b;
  public static boolean fun() {
    boolean b = new Random().nextBoolean();
    boolean result = f(b);
    return result == !b;
  }

  //@ ensures \result == !b;
  public static boolean f(boolean b) {
    return !b;
  }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:4: error: cannot find symbol
  //@ ensures \result == !b;
                          ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
  //@ ensures \result == !b;
  public static boolean fun() {
    boolean b = new Random().nextBoolean();
    boolean result = f(b);
    return result == !b;
  }

  //@ requires b == true || b == false;
  //@ ensures \result == !b;
  public static boolean f(boolean b) {
    return !b;
  }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:4: error: cannot find symbol
  //@ ensures \result == !b;
                          ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
  //@ ensures \result == !f(b);
  public static boolean fun() {
    boolean b = new Random().nextBoolean();
    boolean result = f(b);
    return result == !b;
  }

  //@ requires b == true || b == false;
  //@ ensures \result == !b;
  public static boolean f(boolean b) {
    return !b;
  }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:4: error: cannot find symbol
  //@ ensures \result == !f(b);
                            ^
  symbol:   variable b
  location: class boolean2
1 error

import java.util.Random;

public class boolean2 {
  //@ ensures \result == !f(\result);
  public static boolean fun() {
    boolean b = new Random().nextBoolean();
    boolean result = f(b);
    return result == !b;
  }

  //@ requires b == true || b == false;
  //@ ensures \result == !b;
  public static boolean f(boolean b) {
    return !b;
  }
}

